# LMI-MPC_lateral_control

./: CMakeLists.txt  Readme.md  package.xml  setup.py
launch/: lmi_based_mpc.launch  lmi_based_mpc_cvxopt.launch
scripts/: Kothare_lmi_test.m  lmi_cvxpy_test.py  pylmi_cvxopt.py
src/lmi_based_lateral_mpc/: lmi_cvxopt.py  lmi_cvxopt_node.py  lmi_cvxpy.py  lmi_cvxpy_node.py  lpv_based_latera_control.py
tests/: mpclmi_cvxpy.py
